@@ -1,5 +1,5 @@
 {
-  "count": 20,
+  "count": 21,
   "uniques": 11,
   "clones": [
     {
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2025-02-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
