@@ -1,3 +1,12 @@
+2025-02-09T01:04:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13220903405 # 560
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-09
+* notice: last 14d: unq all: 11 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 438 828 / 455 848
+* notice: next accum: outdated-unq outdated-all / unq all: 438 828 / 456 849
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-02-08]
+
 2025-02-08T00:59:38Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13210654623 # 559
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-08
